--- a/app/src/main/res/layout/content_match_record.xml
+++ b/app/src/main/res/layout/content_match_record.xml
@@ -72,46 +72,55 @@
             android:layout_height="wrap_content"
             android:orientation="horizontal">
 
-            <TextView
-                android:id="@+id/content_play"
+            <LinearLayout
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:textColor="@color/color_e5e5e5_333333"
-                android:textSize="@dimen/textSize14sp"
-                tools:text="篮球 让球" />
+                android:orientation="vertical">
 
-            <TextView
-                android:id="@+id/tv_count_down"
+                <TextView
+                    android:id="@+id/content_play"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:textAlignment="viewStart"
+                    android:textColor="@color/color_e5e5e5_333333"
+                    android:textSize="@dimen/textSize14sp"
+                    tools:text="篮球 让球" />
+
+                <TextView
+                    android:id="@+id/match_play_time"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:textAlignment="viewStart"
+                    android:textColor="@color/color_A3A3A3_666666"
+                    android:textSize="@dimen/textSize12sp"
+                    tools:text="2022-02-25 10:42" />
+
+            </LinearLayout>
+
+            <LinearLayout
                 android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:textColor="@color/color_317FFF_0760D4"
-                android:textSize="@dimen/textSize14sp"
-                tools:text="30s" />
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
-
-            <TextView
-                android:id="@+id/match_play_time"
-                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:textColor="@color/color_A3A3A3_666666"
-                android:textSize="@dimen/textSize12sp"
-                tools:text="2022-02-25 10:42" />
+                android:orientation="vertical">
 
-            <TextView
-                android:id="@+id/tv_score"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:textColor="@color/color_8F8F8F_999999"
-                android:textSize="@dimen/textSize12sp"
-                tools:text="(5-26)" />
+                <TextView
+                    android:id="@+id/tv_count_down"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:textAlignment="viewEnd"
+                    android:textColor="@color/color_317FFF_0760D4"
+                    android:textSize="@dimen/textSize14sp"
+                    tools:text="30s" />
+
+                <TextView
+                    android:id="@+id/tv_score"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:textAlignment="viewEnd"
+                    android:textColor="@color/color_8F8F8F_999999"
+                    android:textSize="@dimen/textSize12sp"
+                    tools:text="(5-26)" />
+            </LinearLayout>
 
         </LinearLayout>
 
@@ -120,6 +129,7 @@
             android:id="@+id/play_content"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:textAlignment="viewStart"
             android:textColor="@color/color_A3A3A3_666666"
             android:textSize="@dimen/textSize13sp"
             tools:text="密尔沃基雄鹿 6.5 \@ 1.860 (印尼盘)" />
@@ -138,6 +148,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/bet_info_list_bet_quota"
+                    android:textAlignment="viewStart"
                     android:textColor="@color/color_e5e5e5_333333"
                     android:textSize="@dimen/textSize13sp" />
 
@@ -145,6 +156,7 @@
                     android:id="@+id/content_bet_amount"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:textAlignment="viewStart"
                     android:textColor="@color/color_e5e5e5_333333"
                     android:textSize="@dimen/textSize13sp"
                     tools:text="50.000" />
@@ -158,6 +170,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/bet_info_list_win_quota"
+                    android:textAlignment="viewEnd"
                     android:textColor="@color/color_e5e5e5_333333"
                     android:textSize="@dimen/textSize13sp" />
 
@@ -165,6 +178,7 @@
                     android:id="@+id/content_winnable_amount"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:textAlignment="viewEnd"
                     android:textColor="@color/colorGreenSea"
                     android:textSize="@dimen/textSize13sp"
                     tools:text="9,999,999.000" />
@@ -180,6 +194,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
+                android:textAlignment="viewStart"
                 android:textColor="@color/color_8F8F8F_999999"
                 android:textSize="@dimen/textSize13sp"
                 tools:text="b000003612091822030128" />
@@ -188,6 +203,7 @@
                 android:id="@+id/content_time_type"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:textAlignment="viewEnd"
                 android:textColor="@color/color_8F8F8F_999999"
                 android:textSize="@dimen/textSize13sp"
                 tools:text="23:04:01 (欧洲盘)" />
