--- a/app/src/main/res/layout/content_parlay_match.xml
+++ b/app/src/main/res/layout/content_parlay_match.xml
@@ -21,57 +21,73 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
-
-            <TextView
-                android:id="@+id/content_play"
+            <LinearLayout
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:textColor="@color/color_e5e5e5_333333"
-                android:textSize="@dimen/textSize14sp"
-                tools:text="篮球 让球" />
+                android:orientation="vertical">
 
-            <TextView
-                android:id="@+id/tv_count_down_parley"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:textColor="@color/color_317FFF_0760D4"
-                android:textSize="@dimen/textSize14sp"
-                tools:text="30s" />
+                <TextView
+                    android:id="@+id/content_play"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:textAlignment="viewStart"
+                    android:textColor="@color/color_e5e5e5_333333"
+                    android:textSize="@dimen/textSize14sp"
+                    tools:text="篮球 让球" />
 
-        </LinearLayout>
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="4dp"
+                    android:orientation="horizontal">
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="4dp"
-            android:orientation="horizontal">
+                    <TextView
+                        android:id="@+id/content_date"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginEnd="4dp"
+                        android:textAlignment="viewStart"
+                        android:textColor="@color/color_e5e5e5_333333"
+                        android:textSize="@dimen/textSize13sp"
+                        tools:text="06-22" />
 
-            <TextView
-                android:id="@+id/content_date"
+                    <TextView
+                        android:id="@+id/content_league"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:textColor="@color/color_e5e5e5_333333"
+                        android:textSize="@dimen/textSize13sp"
+                        tools:text="NBA季后赛" />
+
+                </LinearLayout>
+
+            </LinearLayout>
+
+            <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginEnd="4dp"
-                android:textColor="@color/color_e5e5e5_333333"
-                android:textSize="@dimen/textSize13sp"
-                tools:text="06-22" />
+                android:orientation="vertical">
 
-            <TextView
-                android:id="@+id/content_league"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:textColor="@color/color_e5e5e5_333333"
-                android:textSize="@dimen/textSize13sp"
-                tools:text="NBA季后赛" />
+                <TextView
+                    android:id="@+id/tv_count_down_parley"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:textColor="@color/color_317FFF_0760D4"
+                    android:textSize="@dimen/textSize14sp"
+                    tools:text="30s" />
 
-            <TextView
-                android:id="@+id/tv_score_parlay"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:textColor="@color/color_8F8F8F_999999"
-                android:textSize="@dimen/textSize12sp"
-                tools:text="(5-26)" />
+                <TextView
+                    android:id="@+id/tv_score_parlay"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:textAlignment="viewEnd"
+                    android:textColor="@color/color_8F8F8F_999999"
+                    android:textSize="@dimen/textSize12sp"
+                    tools:text="(5-26)" />
+            </LinearLayout>
 
         </LinearLayout>
 
@@ -80,6 +96,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="4dp"
+            android:textAlignment="viewStart"
             android:textColor="@color/color_A3A3A3_666666"
             android:textSize="@dimen/textSize13sp"
             tools:text="2022-02-25 10:42" />
@@ -89,6 +106,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="4dp"
+            android:textAlignment="viewStart"
             android:textColor="@color/color_A3A3A3_666666"
             android:textSize="@dimen/textSize12sp"
             tools:text="密尔沃基雄鹿 v 亚特兰大老鹰" />
@@ -98,6 +116,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="4dp"
+            android:textAlignment="viewStart"
             android:textColor="@color/color_A3A3A3_666666"
             android:textSize="@dimen/textSize13sp"
             tools:text="密尔沃基雄鹿 6.5 \@ 1.860" />
