--- a/app/src/main/res/layout/content_security_code_style_edittext.xml
+++ b/app/src/main/res/layout/content_security_code_style_edittext.xml
@@ -79,7 +79,7 @@
                     android:minHeight="32dp"
                     android:text="@string/get_security_code"
                     android:textAllCaps="false"
-                    android:textColor="@color/color_191919_FCFCFC"
+                    android:textColor="@color/color_FCFCFC"
                     android:textSize="@dimen/textSize14sp" />
 
             </LinearLayout>
