--- a/app/src/main/res/layout/dialog_security_code_submit.xml
+++ b/app/src/main/res/layout/dialog_security_code_submit.xml
@@ -6,13 +6,12 @@
     android:layout_height="wrap_content"
     android:layout_margin="10dp"
     app:cardCornerRadius="8dp"
-    android:background="@color/color_FDFDFD"
     tools:context="ui.common.CustomSecurityDialog">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/color_FDFDFD"
+        android:background="@color/color_191919_FCFCFC"
         android:orientation="vertical">
 
         <TextView
@@ -98,7 +97,7 @@
                 android:gravity="center"
                 android:text="@string/submit"
                 android:textAllCaps="true"
-                android:textColor="@color/color_2B2B2B_e2e2e2"
+                android:textColor="@color/color_cccccc_e2e2e2"
                 android:textSize="@dimen/textSize14sp" />
 
         </LinearLayout>
