--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -85,6 +85,9 @@
     <color name="color_F75452_000000">@color/color_F75452</color>
     <color name="color_BCBCBC_CCCCCC">@color/color_bcbcbc</color>
     <color name="color_404348_404040">@color/color_404348</color>
+    <color name="color_2B2B2B_EEEFF0">@color/color_2B2B2B</color>
+    <color name="color_191919_FDFDFD">@color/color_191919</color>
+    <color name="color_cccccc_e2e2e2">@color/color_cccccc</color>
 
     <!--region 特殊處理顏色-->
     <color name="home_card_top_text_color">#1AFFFFFF</color>
