--- a/app/src/main/res/layout/home_game_table_bar.xml
+++ b/app/src/main/res/layout/home_game_table_bar.xml
@@ -23,7 +23,7 @@
         android:background="@null"
         android:button="@null"
         android:paddingHorizontal="10dp"
-        android:text="@string/home_tab_in_play2"
+        android:text="@string/home_tab_in_play"
         android:textAllCaps="true"
         android:textColor="@color/selector_blue_gray_light"
         android:textSize="@dimen/textSize16sp" />
