--- a/app/src/main/res/layout/itemview_outright_league_v4.xml
+++ b/app/src/main/res/layout/itemview_outright_league_v4.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    tools:ignore="spUsage">
+    tools:ignore="spUsage,UnusedAttribute">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/outright_info_block"
@@ -19,10 +19,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:gravity="center"
-            android:includeFontPadding="false"
+            android:lineHeight="24dp"
             android:lineSpacingExtra="4dp"
-            android:paddingStart="16dp"
-            android:paddingEnd="16dp"
+            android:paddingHorizontal="24dp"
             android:textColor="@color/color_e5e5e5_333333"
             android:textSize="@dimen/textSize16sp"
             android:textStyle="bold"
@@ -37,7 +36,6 @@
             android:id="@+id/outright_league_date"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="2dp"
             android:includeFontPadding="false"
             android:textColor="@color/color_A3A3A3_666666"
             android:textSize="@dimen/textSize12sp"
@@ -69,13 +67,13 @@
         android:id="@+id/outright_league_odd_list"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="12dp"
         android:nestedScrollingEnabled="false"
         android:orientation="vertical"
         android:overScrollMode="never"
-        android:layout_marginBottom="12dp"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-        app:layout_constraintTop_toBottomOf="@id/outright_info_block"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/outright_info_block"
         tools:itemCount="3"
         tools:listitem="@layout/itemview_outright_odd_v4" />
 
