--- a/app/src/main/res/layout/activity_profile_center.xml
+++ b/app/src/main/res/layout/activity_profile_center.xml
@@ -48,11 +48,11 @@
             android:maxLines="1"
             android:textColor="@color/color_317FFF_0760D4"
             android:textSize="@dimen/textSize16sp"
+            android:textStyle="bold"
             app:layout_constraintBottom_toTopOf="@id/label_user_id"
             app:layout_constraintStart_toEndOf="@id/iv_head"
             app:layout_constraintTop_toTopOf="@id/iv_head"
-            tools:text="Jason0921155"
-            android:textStyle="bold"/>
+            tools:text="Jason0921155" />
 
         <ImageButton
             android:id="@+id/btn_edit_nickname"
@@ -133,15 +133,15 @@
         <TextView
             android:id="@+id/tv_currency_type"
             android:layout_width="match_parent"
-            android:layout_weight="1"
             android:layout_height="wrap_content"
             android:layout_marginStart="5dp"
             android:layout_marginEnd="5dp"
+            android:layout_weight="1"
             android:gravity="center_vertical"
             android:textColor="@color/color_FFFFFF_FFFFFF"
             android:textSize="@dimen/textSize18sp"
-            tools:text="PHP"
-            android:textStyle="bold"/>
+            android:textStyle="bold"
+            tools:text="PHP" />
 
         <ImageButton
             android:id="@+id/ivNotice"
@@ -151,8 +151,8 @@
             android:contentDescription="@null"
             android:padding="6dp"
             android:src="@drawable/ic_info_white_inside"
-            app:tint="@color/color_FFFFFF_FFFFFF"
             android:visibility="gone"
+            app:tint="@color/color_FFFFFF_FFFFFF"
             tools:visibility="visible" />
 
         <ImageButton
@@ -189,9 +189,9 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:background="@color/color_191919_FCFCFC"
             android:gravity="center"
             android:minHeight="60dp"
-            android:background="@color/color_191919_FCFCFC"
             android:orientation="horizontal">
 
             <LinearLayout
@@ -215,8 +215,8 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="15dp"
                     android:text="@string/recharge"
-                android:textColor="@color/color_E0E0E0_404040"
-                    android:textSize="@dimen/textSize16sp"/>
+                    android:textColor="@color/color_E0E0E0_404040"
+                    android:textSize="@dimen/textSize16sp" />
 
             </LinearLayout>
 
@@ -281,41 +281,6 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical">
-
-                <LinearLayout
-                    android:id="@+id/btn_credit_bet_record"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:background="@null"
-                    android:gravity="center"
-                    android:minHeight="48dp"
-                    android:orientation="horizontal">
-
-                    <ImageView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginStart="10dp"
-                        android:layout_marginEnd="20dp"
-                        android:contentDescription="@null"
-                        android:src="@drawable/ic_profile_center_credit_bet_record" />
-
-                    <TextView
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:text="@string/credit_bet_record"
-                        android:textColor="@color/color_e5e5e5_333333"
-                        android:textSize="@dimen/textSize14sp" />
-
-                    <ImageView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginEnd="10dp"
-                        android:contentDescription="@null"
-                        android:src="@drawable/ic_arrow_right"/>
-
-                </LinearLayout>
-
                 <LinearLayout
                     android:id="@+id/btn_profile"
                     android:layout_width="match_parent"
@@ -482,7 +447,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginEnd="10dp"
                         android:contentDescription="@null"
-                        android:src="@drawable/ic_arrow_right"/>
+                        android:src="@drawable/ic_arrow_right" />
 
                 </LinearLayout>
 
@@ -700,7 +665,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginEnd="10dp"
                         android:contentDescription="@null"
-                        android:src="@drawable/ic_arrow_right"/>
+                        android:src="@drawable/ic_arrow_right" />
 
                 </LinearLayout>
 
