--- a/app/src/main/res/layout-night/shimmer_placeholder_layout.xml
+++ b/app/src/main/res/layout-night/shimmer_placeholder_layout.xml
@@ -1,37 +1,124 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="65dp">
-
-    <ImageView
-        android:id="@+id/imageViewAvatar"
-        android:layout_width="60dp"
-        android:layout_height="match_parent"
-        android:background="@color/color_cccccc"
-        android:layout_margin="4dp" />
+    android:layout_height="230dp"
+    android:orientation="horizontal"
+    android:background="@color/background">
 
     <LinearLayout
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:layout_toEndOf="@id/imageViewAvatar">
-        <androidx.appcompat.widget.AppCompatTextView
-            android:layout_width="280dp"
-            android:layout_height="18dp"
-            android:background="@color/color_cccccc"
-            android:layout_marginTop="4dp"/>
+        android:layout_weight="1"
+        android:orientation="vertical">
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:gravity="center_vertical"
+            android:orientation="vertical"
+            android:padding="10dp">
 
-        <androidx.appcompat.widget.AppCompatTextView
-            android:layout_width="200dp"
-            android:layout_height="12dp"
-            android:background="@color/color_cccccc"
-            android:layout_marginTop="5sp"/>
+            <androidx.appcompat.widget.AppCompatTextView
+                android:layout_width="180dp"
+                android:layout_height="18dp"
+                android:layout_marginTop="4dp"
+                android:background="@color/color_cccccc" />
 
-        <androidx.appcompat.widget.AppCompatTextView
-            android:layout_width="150dp"
-            android:layout_height="12dp"
-            android:background="@color/color_cccccc"
-            android:layout_marginTop="5sp"/>
+            <androidx.appcompat.widget.AppCompatTextView
+                android:layout_width="150dp"
+                android:layout_height="12dp"
+                android:layout_marginTop="5sp"
+                android:background="@color/color_cccccc" />
+
+            <androidx.appcompat.widget.AppCompatTextView
+                android:layout_width="100dp"
+                android:layout_height="12dp"
+                android:layout_marginTop="5sp"
+                android:background="@color/color_cccccc" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:gravity="center_vertical"
+            android:orientation="vertical"
+            android:padding="10dp">
+
+            <androidx.appcompat.widget.AppCompatTextView
+                android:layout_width="180dp"
+                android:layout_height="18dp"
+                android:layout_marginTop="4dp"
+                android:background="@color/color_cccccc" />
+
+            <androidx.appcompat.widget.AppCompatTextView
+                android:layout_width="150dp"
+                android:layout_height="12dp"
+                android:layout_marginTop="5sp"
+                android:background="@color/color_cccccc" />
+
+            <androidx.appcompat.widget.AppCompatTextView
+                android:layout_width="100dp"
+                android:layout_height="12dp"
+                android:layout_marginTop="5sp"
+                android:background="@color/color_cccccc" />
+        </LinearLayout>
     </LinearLayout>
 
-</RelativeLayout>
+    <LinearLayout
+        android:layout_width="0dp"
+        android:layout_height="match_parent"
+        android:layout_weight="1"
+        android:orientation="horizontal">
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:orientation="vertical"
+            android:padding="5dp">
+            <androidx.appcompat.widget.AppCompatTextView
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:background="@color/color_cccccc" />
+
+            <androidx.appcompat.widget.AppCompatTextView
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:layout_marginTop="8sp"
+                android:background="@color/color_cccccc" />
+
+            <androidx.appcompat.widget.AppCompatTextView
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:layout_marginTop="8sp"
+                android:background="@color/color_cccccc" />
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:orientation="vertical"
+            android:padding="5dp">
+
+            <androidx.appcompat.widget.AppCompatTextView
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:background="@color/color_cccccc" />
+
+            <androidx.appcompat.widget.AppCompatTextView
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:layout_marginTop="8sp"
+                android:background="@color/color_cccccc" />
+
+            <androidx.appcompat.widget.AppCompatTextView
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:layout_marginTop="8sp"
+                android:background="@color/color_cccccc" />
+        </LinearLayout>
+    </LinearLayout>
+
+</LinearLayout>
