--- a/app/src/main/res/layout/itemview_league_odd_v5.xml
+++ b/app/src/main/res/layout/itemview_league_odd_v5.xml
@@ -420,8 +420,6 @@
         app:layout_constraintTop_toTopOf="@id/guide_game_bottom"
         tools:ignore="ContentDescription" />
 
-
-
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_league_odd_btn_pager_main"
         android:layout_width="0dp"
@@ -455,5 +453,18 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/league_odd_quick_cate_divider"
         tools:visibility="visible" />
+
+    <LinearLayout android:id="@+id/listLoading"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toTopOf="@+id/rv_league_odd_btn_pager_main"
+        app:layout_constraintBottom_toBottomOf="@+id/rv_league_odd_btn_pager_main"
+        android:background="@color/background"
+        android:visibility="visible">
+        <include layout="@layout/view_loading"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
+    </LinearLayout>
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
