--- a/app/src/main/res/layout/shimmer_placeholder_layout.xml
+++ b/app/src/main/res/layout/shimmer_placeholder_layout.xml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="230dp"
-    android:orientation="horizontal">
+    android:layout_height="wrap_content"
+    android:minHeight="230dp"
+    android:orientation="horizontal"
+    android:background="@color/background">
 
     <LinearLayout
         android:layout_width="0dp"
