--- a/app/src/main/res/layout/fragment_game_v3.xml
+++ b/app/src/main/res/layout/fragment_game_v3.xml
@@ -139,11 +139,12 @@
             tools:listitem="@layout/itemview_league_v5"
             android:overScrollMode="never"
             android:background="@color/color_191919_FCFCFC"
-            android:visibility="gone"/>
+            android:visibility="visible"/>
         <org.cxct.sportlottery.widget.ListLoadingView
             android:id="@+id/listLoadingView"
             android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+            android:layout_height="match_parent"
+            android:visibility="gone"/>
     </FrameLayout>
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
