--- a/app/src/main/res/layout/activity_phone_verify.xml
+++ b/app/src/main/res/layout/activity_phone_verify.xml
@@ -139,7 +139,7 @@
                         android:minHeight="46dp"
                         android:text="@string/login_phone_verify_get_code"
                         android:textAllCaps="false"
-                        android:textColor="@color/color_191919_FCFCFC"
+                        android:textColor="@color/color_FCFCFC"
                         android:textSize="@dimen/textSize14sp" />
 
                 </LinearLayout>
