--- a/app/src/main/res/layout/view_home_loading.xml
+++ b/app/src/main/res/layout/view_home_loading.xml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <com.facebook.shimmer.ShimmerFrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/shimmerFrameLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    app:shimmer_highlight_alpha="0"
     android:layout_gravity="center"
     android:orientation="vertical"
     android:background="@color/background">
