--- a/app/src/main/res/layout/view_list_loading.xml
+++ b/app/src/main/res/layout/view_list_loading.xml
@@ -1,11 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <com.facebook.shimmer.ShimmerFrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-android:id="@+id/shimmerFrameLayout"
-android:layout_width="match_parent"
-android:layout_height="match_parent"
-android:layout_gravity="center"
-android:orientation="vertical"
-android:background="@color/background">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/shimmerFrameLayout"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:layout_gravity="center"
+    android:orientation="vertical"
+    android:background="@color/background"
+    app:shimmer_highlight_alpha="0">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
