--- a/app/src/main/res/layout/view_bottom_navigation.xml
+++ b/app/src/main/res/layout/view_bottom_navigation.xml
@@ -73,6 +73,17 @@
         app:layout_constraintTop_toTopOf="@+id/txv_about" />
 
     <TextView
+        android:id="@+id/txv_affiliate"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="4dp"
+        android:text="@string/btm_navigation_affiliate"
+        android:textColor="@color/color_8F8F8F_999999"
+        android:textSize="14dp"
+        app:layout_constraintStart_toStartOf="@+id/guideline_vrt"
+        app:layout_constraintTop_toBottomOf="@+id/txv_policy" />
+
+    <TextView
         android:id="@+id/txv_language"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -81,7 +92,7 @@
         android:textColor="@color/color_8F8F8F_999999"
         android:textSize="14dp"
         app:layout_constraintStart_toStartOf="@+id/guideline_vrt"
-        app:layout_constraintTop_toBottomOf="@+id/txv_policy" />
+        app:layout_constraintTop_toBottomOf="@+id/txv_affiliate" />
 
     <ImageView
         android:id="@+id/img_flag"
