--- a/app/src/main/res/layout/content_left_menu_item_header.xml
+++ b/app/src/main/res/layout/content_left_menu_item_header.xml
@@ -163,6 +163,36 @@
 
     </LinearLayout>
 
+    <LinearLayout
+        android:id="@+id/tv_affiliate"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <ImageView
+            android:layout_width="20dp"
+            android:layout_height="20dp"
+            android:layout_gravity="center_vertical"
+            android:layout_marginStart="20dp"
+            android:src="@drawable/ic_affiliate"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/txv_price"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="48dp"
+            android:drawablePadding="10dp"
+            android:gravity="start|center_vertical"
+            android:minHeight="48dp"
+            android:paddingHorizontal="10dp"
+            android:text="@string/btm_navigation_affiliate"
+            android:textColor="@color/color_CCCCCC_333333"
+            android:textSize="@dimen/textSize14sp" />
+
+    </LinearLayout>
+
     <View
         android:id="@+id/divider_login"
         android:layout_width="match_parent"
